upgraded to junit 5 and mockito 5 for unit tests upgraded xom and glazedLists libraries to most recent versions fixed most warnings due to deprecated classes/methods being used